@startuml
title SophiaTech Eats — Domain Class Diagram (Clean)

skinparam classAttributeIconSize 0
skinparam dpi 140
skinparam shadowing false

' ==== Enums ====
enum DishCategory {
STARTER
MAIN_COURSE
DESSERT
DRINK
}
enum OrderStatus {
CREATED
PAID
DELIVERED
CANCELLED
}
enum PaymentMethod {
EXTERNAL
STUDENT_CREDIT
}
enum DietaryTag {
VEGAN
VEGETARIAN
GLUTEN_FREE
LACTOSE_FREE
}

' ==== Core domain only essential attributes ====
class CampusUser {
  - id: String
  - name: String
  - email: String
  - country: String
  - studentCredit: StudentCredit
}
class StudentCredit {
 - budget: double
 - blocked: boolean
}

class Cart {
- id: String
- createdAt: LocalDateTime
}

class Order {
  - id: String
  - createdAt: LocalDateTime
  - total: double
  - status: OrderStatus
  - paidAt: LocalDateTime
  - deliveredAt: LocalDateTime
}

class OrderItem {
- quantity: int
}

class Payment {
  - amount: double
  - method: PaymentMethod
  - success: boolean
  - provider: String
  - redirectUrl: String
}

class Restaurant {
  - id: String
  - name: String
  - cuisine: String
  - priceRange: String
  - open: boolean
}

class DeliverySlot {
  - label: String
  - start: LocalDateTime
  - capacity: int
  - reserved: int
}

class DeliveryLocation {
- name: String
}

class Dish {
  - id: String
  - name: String
  - description: String
  - price: double
  - category: DishCategory
  - tag: DietaryTag
}
class ExtraOption {
- name: String
- price: double
}

CampusUser "1" o-- "0..1" StudentCredit : owns
CampusUser "1" -- "0..1" Cart : currentCart {derived}
CampusUser "1" -- "0..*" Order : orderHistory

Cart "1" -- "0..*" OrderItem : contains
Cart ..> Order : converts to

Order "1" -- "1..*" OrderItem : contains
Order "1" o-- "0..1" Payment : paidBy
Order "1" -- "1" DeliverySlot : scheduledIn
Order "1" -- "1" DeliveryLocation : deliversTo

OrderItem "1" -- "1" Dish : itemOf
OrderItem "0..*" -- "0..*" ExtraOption : chosenOptions

Restaurant "1" o-- "1..*" DeliverySlot : defines slots
Restaurant "1" o-- "1..*" Dish : offers

Dish "0..*" o-- "0..*" ExtraOption : availableOptions
@enduml
